@@ -1,3 +1,7 @@
+Apr 19, 2006
+
+ * JW: Make library(chr) load its private stuff silent.
+
 Apr 14, 2006
  
  * TS: Bug fix: too many guards were locked.
